# djangocuatui

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
tnrd/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
