[tool.poetry]
name = "tyrender"
version = "0.1.0"
description = ""
authors = ["uolo <hyhytyty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
